fixed page overlap

--- a/Project1.css
+++ b/Project1.css
@@ -189,6 +189,10 @@ a.pure-button-primary {
     color: #AECFE5;
 }
 
+.gameResults {
+    color: #7f8c8d; 
+}
+
 
 /*blue top section that appears on the page.*/
 
